--- a/mod3-sol/foundItems.html
+++ b/mod3-sol/foundItems.html
@@ -1,8 +1,9 @@
 
+<h1>Result</h1>
+<div ng-if="list.isEmpty()">Nothing found</div>
 <ul>
-  <li ng-repeat="item in foundCtrl.items">
-    {{ item.name }}, {{ item.short_name }}, {{item.description}}
-    <button ng-click="foundCtrl.onRemove({index: $index});">Don't want this one!</button>
-  </li>
+<li ng-repeat="item in list.found">
+{{item.name}}, {{item.short_name}}, {{item.description}}
+<button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
+</li>
 </ul>
-<div ng-if="foundCtrl.isNothingFound()">Nothing found.</div>
